--- a/Docusaurus/blog/2024-11-05-POPQUIZ.md
+++ b/Docusaurus/blog/2024-11-05-POPQUIZ.md
@@ -7,7 +7,7 @@ tags: [POPQUIZ, WEEK07]
 
 This is our POP QUIZ posting!
 
--- Dardrich and lantry-glitch
+-- lantry-glitch and Dardrich
 
 <!--truncate-->
 
